Docs: Fix long words breaking the site on small screens (#2521)
* Add overflow wrap for long words

* Fix specific case of overflowing text

--- a/docs/sass/_base.scss
+++ b/docs/sass/_base.scss
@@ -18,6 +18,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  // Stop long words from breaking mobile
+  overflow-wrap: break-word;
 }
 
 img {
